fixed image alignment

--- a/css/materialize.css
+++ b/css/materialize.css
@@ -7400,6 +7400,7 @@ nav .brand-logo.right {
 }
 
 nav ul {
+  list-style-type: none;
   margin: 0;
 }
 
